spacing fixed

--- a/styles/main.less
+++ b/styles/main.less
@@ -49,6 +49,10 @@ section {
 	min-height: 75vh;
 }
 
+.btn {
+	display: block;
+}
+
 /* Content
 * 
 --------------------------------------------- */
@@ -324,10 +328,25 @@ ul {
 		text-transform: uppercase;
 	}
 
+	h3 {
+		margin-top: 3em;
+	}
+
+	.btn {
+		margin-top: 2em;
+
+	}
+
+	.direction-btn {
+		position: absolute;
+		margin-left: auto;
+	    margin-right: auto;
+	}
+
 
 	.container {
 		background-color: white;
-		padding: 1em 0;
+		padding: 1.3em 0;
 		position: absolute;
 	    z-index: 9;
 	    margin-left: auto;
@@ -339,13 +358,26 @@ ul {
 	    background: white;
 	    box-shadow: 0px 7px 40px rgba(0, 0, 0, 0.15);
 	}
+
+
+	.show-info {
+		padding: 4em  0 4em 5em;
+	}
 }
 
 #map {
 	width: 100%;
-	height: 800px;
+	height: 800px; //change to 1000
 	z-index: -10;
 }
+
+
+
+/* RSVP info ------------------------------------- */
+#rsvp-info {
+	margin-top: 5em;
+}
+
 
 
 
